<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/ic_back_onboarding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ic_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_star_primary"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:letterSpacing="-0.01"
                android:lineSpacingExtra="9sp"
                android:text="Sign Up"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:lineSpacingExtra="3.5sp"
                android:text="@string/onboarding_email"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/onboarding_edittext"
                android:hint="@string/onboarding_email"
                android:inputType="textEmailAddress"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

            <ImageView
                android:id="@+id/icVerifiedEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_email_checked"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/etEmail"
                app:layout_constraintRight_toRightOf="@+id/etEmail"
                app:layout_constraintTop_toTopOf="@+id/etEmail" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3.5sp"
                android:text="@string/onboarding_first_name"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />


            <EditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/onboarding_edittext"
                android:hint="@string/onboarding_first_name"
                android:inputType="textEmailAddress"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />


            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3.5sp"
                android:text="@string/onboarding_last_name"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFirstName" />


            <EditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/onboarding_edittext"
                android:hint="@string/onboarding_last_name"
                android:inputType="textEmailAddress"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLastName" />


            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3.5sp"
                android:text="@string/onboarding_phone_number"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLastName" />


            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/onboarding_edittext"
                android:hint="@string/onboarding_phone_number"
                android:inputType="textEmailAddress"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber" />


            <!--Passwords-->
            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3.5sp"
                android:text="@string/onboarding_password"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/onboarding_edittext"
                android:hint="@string/onboarding_password"
                android:inputType="textPassword"
                android:padding="14dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

            <ImageView
                android:id="@+id/showHidePasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="14dp"
                android:src="@drawable/ic_eye_selector"
                app:layout_constraintBottom_toBottomOf="@+id/etPassword"
                app:layout_constraintRight_toRightOf="@+id/etPassword"
                app:layout_constraintTop_toTopOf="@+id/etPassword" />


            <TextView
                android:id="@+id/tvConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3.5sp"
                android:text="@string/onboarding_password_confirm"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />


            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/onboarding_edittext"
                android:hint="@string/onboarding_password_confirm"
                android:inputType="textPassword"
                android:padding="14dp"
                app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassword" />

            <ImageView
                android:id="@+id/showHidePasswordBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="14dp"
                android:src="@drawable/ic_eye_selector"
                app:layout_constraintBottom_toBottomOf="@+id/etConfirmPassword"
                app:layout_constraintRight_toRightOf="@+id/etConfirmPassword"
                app:layout_constraintTop_toTopOf="@+id/etConfirmPassword" />


            <TextView
                android:id="@+id/tvAddressTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3.5sp"
                android:text="@string/onboarding_address"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />


            <TextView
                android:id="@+id/tvPostCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/onboarding_edittext"
                android:hint="@string/onboarding_post_code"
                android:padding="14dp"
                android:textSize="18sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btnAddress"
                app:layout_constraintTop_toBottomOf="@+id/tvAddressTitle" />

            <TextView
                android:id="@+id/btnAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/primary_btn"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="14dp"

                android:text="@string/post_code_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintLeft_toRightOf="@+id/tvPostCode"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddressTitle" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/onboarding_edittext"
                android:hint="@string/onboarding_address"
                android:padding="14dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/tvPostCode" />


            <EditText
                android:id="@+id/etAddressDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/onboarding_edittext"
                android:hint="@string/onboarding_address_details"
                android:padding="14dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/tvAddress" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/agreementBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/agreement_selector" />

            <TextView
                android:id="@+id/aggrementTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:lineSpacingExtra="3.5sp"
                android:text="I accept the terms and privacy policy"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

        <TextView
            android:id="@+id/btnComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:background="@drawable/primary_btn"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/complete_btn_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    </LinearLayout>
</LinearLayout>