<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="9sp"
        android:text="Reset password"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:lineSpacingExtra="4sp"
        android:text="Please type something you’ll remember"
        android:textColor="#b3000000"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <!--Passwords-->
    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/onboarding_password"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/onboarding_edittext"
        android:hint="@string/onboarding_password"
        android:inputType="textPassword"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <ImageView
        android:id="@+id/showHidePasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="14dp"
        android:src="@drawable/ic_eye_selector"
        app:layout_constraintBottom_toBottomOf="@+id/etPassword"
        app:layout_constraintRight_toRightOf="@+id/etPassword"
        app:layout_constraintTop_toTopOf="@+id/etPassword" />


    <TextView
        android:id="@+id/tvConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/onboarding_password_confirm"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />


    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/onboarding_edittext"
        android:hint="@string/onboarding_password_confirm"
        android:inputType="textPassword"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassword" />

    <ImageView
        android:id="@+id/showHidePasswordBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="14dp"
        android:src="@drawable/ic_eye_selector"
        app:layout_constraintBottom_toBottomOf="@+id/etConfirmPassword"
        app:layout_constraintRight_toRightOf="@+id/etConfirmPassword"
        app:layout_constraintTop_toTopOf="@+id/etConfirmPassword" />


    <TextView
        android:id="@+id/btnComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"
        android:background="@drawable/primary_btn"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/reset_password_btn_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>